fixed the issue with the contact section not aligning with the others by updating styling in container div

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 #container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex;
     color: #2e2f2f;
 }
 /* this class effects the h2s in the container div */
@@ -97,7 +97,7 @@
 .contact-list {
     display: flex;
     float: right;
-    justify-content:space-between;
+    justify-content:space-evenly;
     list-style: none;
 }
 
